--- a/themes/personal-theme/style.css
+++ b/themes/personal-theme/style.css
@@ -340,10 +340,16 @@ footer a {
     height: 550px;
     width: 1300px;
 }
-
 @media screen and (max-width: 1275px) {
     .biiger-intro__text {
         font-size: 4.23em;
+    }
+    div.contact__links {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, 1fr);
+    }
+    .link{
+        margin-bottom: 1.3em;
     }
 }
 
@@ -497,6 +503,10 @@ footer a {
     .project__intro .intro__content a{
         border: none;
     }
+    div form p:nth-of-type(1), div form p:nth-of-type(2) {
+        display: block;
+        width: 100%;
+    }
 }
 
 
@@ -617,6 +627,9 @@ a:hover:after {
     div.overview__img{
         width: 100%
     }
+    main.contact__main{
+        width: 80%;
+    }
 }
 @media screen and (max-width: 450px) {
     .projects{
@@ -693,4 +706,97 @@ a:hover:after {
     padding: 0 1.2em;
     position: relative;
     bottom: 15px;
+}
+
+.contact__main{
+    width: 55.18%;
+    margin: 0 auto;
+}
+.contact__main h2{
+    font-size: 4.23em;
+    color: #A77F4D;
+    font-family: 'Playfair Display', serif;
+    line-height: 1.2;
+}
+.contact__title-rect p{
+    font-size: 1.3em;
+    margin-bottom: 2.8em;
+}
+.contact__title-rect{
+    text-align: center;
+    margin-top: 1.2em;
+}
+.contact__content{
+    width: 76.95%;
+    margin: 0 auto;
+}
+.contact__links{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    text-align: center;
+    width: 100%;
+}
+.contact__links h3{
+    font-size: 1.3em;
+    font-family: 'Playfair Display', serif;
+    padding-bottom: 0.3em;
+    color: #1A1A20;
+}
+.contact__links span{
+    color: #A77F4D;
+}
+.contact__links a:after{
+    content: none;
+}
+.contact__links a:hover{
+    transform: none;
+}
+.contact__main form{
+    color: #A77F4D;
+    margin-top: 4em;
+}
+.contact__main input, .contact__main textarea{
+    color: #1A1A20;
+    font-size: 1em;
+    padding: 0.3em;
+    width: 100%;
+    box-sizing: border-box;
+    margin-top: 0.4em;
+    margin-bottom: 1.3em;
+}
+.contact__main input{
+    border: none;
+    border-bottom: 1px solid #1A1A20;
+}
+.contact__main textarea{
+    font-size: 1.23em;
+    height: 7em;
+    resize: none;
+}
+form p:nth-of-type(1), form p:nth-of-type(2){
+    display: inline-block;
+    width: 45%;
+}
+form p:nth-of-type(1){
+    margin-right: 9%;
+}
+::placeholder {
+    color: #707070;
+    font-size: 1em;
+}
+input[type="submit"] {
+    margin: 0;
+    width: auto;
+    color: #1A1A20;
+    border-bottom: 1px solid #A77F4D;
+    font-size: 1.2em;
+    background-color: transparent;
+    transition: transform .3s ease-in-out;
+}
+input[type="submit"]:hover {
+    -webkit-transform: translate(0, -5px);
+    transform: translate(0, -5px);
+}
+form p:last-of-type{
+    text-align: center;
 }
